force-app/main/default/objects/FroceDotCom__c/FroceDotCom__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Site Config</description>
    <label>FroceDotCom</label>
</CustomObject>