force-app/main/default/objects/FroceDotCom__c/fields/Cancel_URL__c.field-meta.xml
<CustomField>
    <fullName>Cancel_URL__c</fullName>
    <label>Cancel URL</label>
    <type>Url</type>
</CustomField>