force-app/main/default/objects/FroceDotCom__c/fields/Save_URL__c.field-meta.xml
<CustomField>
    <fullName>Save_URL__c</fullName>
    <label>Save URL</label>
    <type>Url</type>
</CustomField>