force-app/main/default/objects/FroceDotCom__c/fields/WebsiteEndPoint__c.field-meta.xml
<CustomField>
    <fullName>WebsiteEndPoint__c</fullName>
    <label>WebsiteEndPoint</label>
    <type>Url</type>
</CustomField>